--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,9 @@ __pycache__
 # Winmerge backups
 *.bak
 
-# Output files
-cycles.txt
+# Input/Output files
+/input
+cycles*.txt
 
 # Third party libraries
 third_party
